Bug 328783 - Index for Section 8: System Administration alphabetic group selection missing at top
Summary: Index for Section 8: System Administration alphabetic group selection missing...
Status: RESOLVED FIXED
Alias: None
Product: khelpcenter
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.11.3
Platform: unspecified Unspecified
: NOR minor
Target Milestone: ---
Assignee: Documentation Editorial Team
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-14 06:10 UTC by Geoff Cutter
Modified: 2014-03-15 14:28 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Geoff Cutter 2013-12-14 06:10:56 UTC
Index for Section 8: System Administration 

Alphabetic group selection 

[a] [b] [c] [d] [e] [f] [g] [h] [i] [k] [l] [m] [n] [o] [p] [q] [r] [s] [t] [u] [v] [w] [x] [y] [z]

missing at top (but it does occur at the bottom)

Reproducible: Always
Comment 1 Burkhard Lück 2013-12-14 11:09:26 UTC
Yes it makes more sense to have this at the top of an index page.
This applies to all index pages here, not just to Section 8.

The index pages seem to be generated in 
kdebase/kde-runtime/kioslave/man/kio_man.cpp:1145:void MANProtocol::showIndex(const QString& section)
Comment 2 Luigi Toscano 2014-03-15 14:28:39 UTC
Git commit afbe19624d731a6d9a20b5a3cb2e63cccab26b99 by Luigi Toscano.
Committed on 15/03/2014 at 14:24.
Pushed by ltoscano into branch 'master'.

Display the alphabetic selector of man pages also at the top

Replicate the quick-access alphabetical index for each category also
at the top of the page, making it more accessible.

REVIEW: 116793
FIXED-IN: 4.14

M  +18   -11   kioslave/man/kio_man.cpp

http://commits.kde.org/kde-runtime/afbe19624d731a6d9a20b5a3cb2e63cccab26b99