Display the alphabetic selector of man pages also at the top

Replicate the quick-access alphabetical index for each category also
at the top of the page, making it more accessible.

REVIEW: 116793
BUG: 328783
FIXED-IN: 4.14